--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "scrabble-hawk",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0"
+  }
 }
